<resources>
    <string name="app_name">Android Alarm System</string>
    <string name="action_settings">Settings</string>
    <string name="delete_all">Delete All Alarms</string>
    <string name="insert_questions">Insert Questions</string>
    <string name="alarm_creation_title">Create New Alarm</string>
    <string name="alarm_edit_title">Update Alarm</string>
    <string name="alarm_name">Name</string>
    <string name="alarm_name_hint">Alarm Name</string>
    <string name="time_label">Time:</string>
    <string name="create_button">Create</string>
    <string name="update_button">Update</string>
    <string name="tone_label">Alarm Tone</string>
    <string name="hour_input_hint">HH</string>
    <string name="minute_input_hint">MM</string>
    <string name="colon">:</string>
    <string-array name="tones_array">
        <item>Alarm Tone 1 (Default)</item>
        <item>Alarm Tone 2</item>
        <item>Alarm Tone 3</item>
        <item>Alarm Tone 4</item>
        <item>Alarm Tone 5</item>
    </string-array>

    <string name="title_activity_alarm_ring">AlarmRingActivity</string>
    <string name="desc">Answer the following question to disable alarm</string>
    <string name="submit_answer">Check</string>
</resources>
